@@ -9,10 +9,11 @@ If you do not wish to enable the plugin support within GAIM, run the
 ./configure script with the --disable-plugins option and recompile your
 source code.  This will stop any plugins from loading.
 
-Currently, they are not compiled when you perform a make and make install.
 If you wish to make use of the gaim plugins, enter the directory where you
 untarred gaim/plugins and type: 'make'.  Copy the resulting .so files to
-a safe location ($HOME/.gaim/plugins) and load them from within gaim.
+a safe location ($HOME/.gaim/plugins) and load them from within gaim. Note
+that plugins do not have to have a .so extension, but that is what is built
+by default, and that is what gaim looks for by default.
 
 Enjoy and Happy Hacking!
 
