@@ -384,6 +384,8 @@ void build_prefs()
 	gaim_button("Show Lag-O-Meter", &general_options, OPT_GEN_SHOW_LAGMETER, genbox);
         gaim_button("Save some window size/positions", &general_options, OPT_GEN_SAVED_WINDOWS, genbox);
         gaim_button("Ignore new conversations when away", &general_options, OPT_GEN_DISCARD_WHEN_AWAY, genbox);
+	if (!dw && (general_options & OPT_GEN_DEBUG))
+		general_options = general_options ^ OPT_GEN_DEBUG;
         debugbutton = gaim_button("Enable debug mode", &general_options, OPT_GEN_DEBUG, genbox);
 
 
